// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tagInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-success="true"] {
  border-color: #22674e;
}

.emotion-0[data-error="true"] {
  border-color: #b3144d;
}

.emotion-0:hover {
  border-color: #792dd4;
}

.emotion-0[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-0[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4::-moz-placeholder {
  color: #727683;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
}

.emotion-4::placeholder {
  color: #727683;
}

.emotion-4[data-size="large"] {
  font-size: 1rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <div>
          <div
            class="emotion-0 emotion-1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <input
                class="emotion-4 emotion-5"
                data-size="large"
                id="«r0»"
                name="test"
                placeholder="placeholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should render correctly with regex 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-success="true"] {
  border-color: #22674e;
}

.emotion-0[data-error="true"] {
  border-color: #b3144d;
}

.emotion-0:hover {
  border-color: #792dd4;
}

.emotion-0[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-0[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4::-moz-placeholder {
  color: #727683;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
}

.emotion-4::placeholder {
  color: #727683;
}

.emotion-4[data-size="large"] {
  font-size: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r2»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-0 emotion-1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <span
                class="uv_d6zknp0 uv_d6zknp4"
              >
                <span
                  class="uv_d6zknpa uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow3c"
                >
                  4
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_d6zknpb uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
                class="emotion-4 emotion-5"
                data-size="large"
                id="«r2»"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="emotion-6 emotion-7"
            >
              <button
                aria-label="clear value"
                class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoej uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        disabled=""
        type="submit"
      >
        Test
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`tagInputField > should works with defaultValues 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  background-color: #ffffff;
  padding: calc(0.75rem - 1px) 1rem;
  cursor: text;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-0:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-success="true"] {
  border-color: #22674e;
}

.emotion-0[data-error="true"] {
  border-color: #b3144d;
}

.emotion-0:hover {
  border-color: #792dd4;
}

.emotion-0[data-readonly="true"] {
  border-color: #d9dadd;
  background: #f9f9fa;
}

.emotion-0[data-disabled="true"] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  background: inherit;
  color: #3f4250;
  border: none;
  outline: none;
  height: 100%;
}

.emotion-4::-webkit-input-placeholder {
  color: #727683;
}

.emotion-4::-moz-placeholder {
  color: #727683;
}

.emotion-4:-ms-input-placeholder {
  color: #727683;
}

.emotion-4::placeholder {
  color: #727683;
}

.emotion-4[data-size="large"] {
  font-size: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r9»"
        >
          Test
        </label>
        <div>
          <div
            class="emotion-0 emotion-1"
            data-disabled="false"
            data-error="false"
            data-readonly="false"
            data-success="false"
          >
            <div
              class="emotion-2 emotion-3"
            >
              <span
                class="uv_d6zknp0 uv_d6zknp4"
              >
                <span
                  class="uv_d6zknpa uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow7 uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow3c"
                >
                  First
                </span>
                <button
                  aria-label="Close tag"
                  class="uv_d6zknpb uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                  data-testid="close-tag"
                  type="button"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
              </span>
              <input
                class="emotion-4 emotion-5"
                data-size="large"
                id="«r9»"
                name="test"
                placeholder=""
                type="text"
                value=""
              />
            </div>
            <div
              class="emotion-6 emotion-7"
            >
              <button
                aria-label="clear value"
                class="uv_e1wcoe0 uv_e1wcoe4 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
                type="button"
              >
                <svg
                  class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza styles_undefined_compound_39__1sbwqkz1n"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe6 uv_e1wcoek uv_e1wcoeg uv_e1wcoe7 uv_e1wcoel"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;
